[TASK] add and enable php-xdebug, move document root to /var/www/html/web

--- a/typo3.default.conf
+++ b/typo3.default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
   ServerAdmin webmaster@localhost
-  DocumentRoot /var/www/html
+  DocumentRoot /var/www/html/web
   SetEnv TYPO3_CONTEXT Development/Docker
-  <Directory /var/www/html/>
+  <Directory /var/www/html/web/>
     Options Indexes FollowSymLinks
     AllowOverride All
     Order allow,deny
