--- a/typo3.php.ini
+++ b/typo3.php.ini
@@ -3,3 +3,7 @@ max_execution_time = 240
 upload_max_filesize = 200M
 post_max_size= 400M
 max_input_vars=1500
+
+xdebug.remote_enable=1
+xdebug.max_nesting_level=400
+xdebug.remote_connect_back=Off
